--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,75 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply bg-slate-200 text-gray-950 dark:bg-slate-800 dark:text-gray-50;
+  }
+
+  .main {
+    @apply flex flex-col items-center px-8 relative
+  }
+}
+
+@layer components {
+  .fixed-header {
+    @apply fixed top-0 left-1/2 -translate-x-1/2 h-[4.5rem] w-full rounded-none border border-white border-opacity-40 bg-white bg-opacity-75 shadow-lg shadow-black/[0.03] backdrop-blur-[0.5rem] sm:top-6 sm:h-[3.25rem] sm:w-[36rem] sm:rounded-full dark:bg-gray-900 dark:border-black/10 dark:bg-opacity-75;
+  }
+
+  .section-divider {
+    @apply bg-gray-300 my-24 h-1 rounded-full dark:bg-opacity-20;
+  }
+
+  .section-heading {
+    @apply text-3xl font-medium capitalize mb-16 text-center;
+  }
+
+  .footer {
+    @apply mt-8 mb-4 px-4 text-center text-gray-600 dark:text-gray-400;
+  }
+
+  .submit-button {
+    @apply flex items-center justify-center gap-2 h-[3rem] w-[8rem] bg-gray-900 text-white rounded-full outline-none transition-all hover:scale-110 hover:bg-gray-950 active:scale-105 disabled:scale-100 disabled:opacity-65 dark:bg-white/10 sm:dark:bg-gray-900/60;
+  }
+
+  .contact-button {
+    @apply bg-gray-900 text-white px-7 py-3 flex items-center gap-2 rounded-full outline-none focus:scale-105 hover:scale-105 hover:bg-gray-950 dark:bg-gray-950 active:scale-105 transition
+  }
+
+  .custom-toast {
+    @apply max-w-md w-full bg-white shadow-lg rounded-lg pointer-events-auto flex text-gray-900 dark:bg-gray-900 dark:text-gray-50;
+  }
+
+  .intro-image {
+    @apply rounded-full border-[0.15rem] border-gray-200 shadow-xl;
+  }
+
+  .project-card {
+    @apply relative flex flex-col justify-between bg-slate-300 max-w-[60rem] transition h-[45rem] sm:max-h-[25rem] mb-8 border border-black/10 p-8 rounded-lg shadow-lg shadow-black/[0.10] dark:bg-slate-600 dark:border dark:border-black/25;
+  }
+
+  .skills-list {
+    @apply flex flex-wrap justify-center gap-2 text-lg text-gray-800 dark:text-gray-50;
+  }
+
+  .skill-item {
+    @apply bg-slate-300 rounded-xl px-5 py-3 shadow-md shadow-black/[0.10] dark:bg-slate-600;
+  }
+
+  .contact-form {
+    @apply mt-4 flex flex-col;
+  }
+
+  .contact-input {
+    @apply h-14 px-4 rounded-lg dark:bg-gray-700;
+  }
+
+  .contact-textarea {
+    @apply h-52 p-4 my-3 rounded-lg resize-none dark:bg-gray-700;
+  }
+
+  .theme-switcher {
+    @apply fixed bottom-10 right-10 bg-white w-[3rem] h-[3rem] bg-opacity-80 backdrop-blur-[0.5rem] border border-white border-opacity-40 shadow-xl rounded-full flex items-center justify-center hover:scale-[1.15] active:scale-105 transition-all dark:bg-gray-950;
+  }
+}
