--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@
 
 @layer components {
   .fixed-header {
-    @apply fixed top-0 left-1/2 h-[4.5rem] w-full rounded-none border border-white/40 bg-white/75 shadow-lg shadow-black/[0.03] backdrop-blur-[0.5rem] sm:top-6 sm:h-[3.25rem] sm:w-[36rem] sm:rounded-full dark:bg-gray-900/75 dark:border-black/10;
+    @apply fixed top-0 left-1/2 h-[4.5rem] w-full rounded-none border border-white/40 bg-white/75 shadow-lg shadow-black/[0.03] backdrop-blur-[0.5rem] sm:top-6 sm:h-[3.25rem] sm:w-[36rem] sm:rounded-full dark:bg-slate-900/75 dark:border-black/10;
   }
 }
 
@@ -70,11 +70,11 @@
 }
 
 @utility contact-input {
-  @apply h-14 px-4 rounded-lg bg-white dark:bg-gray-600;
+  @apply h-14 px-4 rounded-lg bg-white dark:bg-slate-600;
 }
 
 @utility contact-textarea {
-  @apply h-52 p-4 my-3 rounded-lg resize-none bg-white dark:bg-gray-600;
+  @apply h-52 p-4 my-3 rounded-lg resize-none bg-white dark:bg-slate-600;
 }
 
 @utility theme-switcher {
