--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,7 @@
 }
 
 @utility section-divider {
-  @apply bg-gray-300 my-24 h-1 rounded-full;
+  @apply bg-gray-300 my-16 h-1 rounded-full sm:my-24 lg:my-32;
 }
 
 @utility section-heading {
